# CasseBrique

./: .gitignore  main.py  main2.py  pyproject.toml  ty.toml
src/: __main__.py  constants.py
src/core/: application.py  game.py
src/objects/: ball.py  brick.py  paddle.py
