[project]
name = "CasseBrique"
version = "2025.1.0"
description = ""

requires-python = ">=3.14"

dependencies = [
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]

[tool.taskipy.tasks]
lint = {cmd = "ruff check -e && ty check", help = "Lint, Format & Type Check the project."}